--- a/index.html
+++ b/index.html
@@ -22,6 +22,253 @@
         }
 
         .container {
+    background: white;
+    padding: 25px;
+    border-radius: 15px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+    text-align: center;
+    transition: all 0.3s ease-in-out;
+    max-width: 400px;
+    min-height: 60vh; /* Ensure it has enough height */
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centers content inside */
+    align-items: center;
+    overflow: hidden; /* Prevents unwanted scrolling */
+}
+
+        h1 {
+            font-size: 22px;
+            color: #444;
+            margin-bottom: 15px;
+            white-space: wrap;
+            word-break: break-word; /* Ensures text doesn't get cropped */
+            text-align: center;
+            padding: 0 10px; /* Prevents cropping on smaller screens */
+        }
+
+        .image-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        #moon-img, #camera {
+            display: none;
+            width: 200px;
+            height: 200px;
+            border-radius: 12px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-container {
+            position: relative;
+            width: 100%;
+            height: 80px;
+        }
+
+
+        button {
+            background: linear-gradient(45deg, #FFB84C, #FFD93D);
+            color: #333;
+            border: none;
+            padding: 12px 20px;
+            font-size: 16px;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            font-weight: bold;
+            position: absolute;
+        }
+
+        button:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 0px 12px rgba(255, 183, 77, 0.7);
+        }
+
+        button:active {
+            transform: scale(0.98);
+        }
+
+        #yes-btn {
+            top: 10px;
+            left: 30px;
+        }
+
+        #no-btn {
+            top: 10px;
+            right: 30px;
+        }
+
+        #message {
+            font-size: 18px;
+            margin-top: 20px;
+            font-weight: bold;
+            color: #ff914d;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+        }
+
+        .fade-in {
+            opacity: 1 !important;
+        }
+
+        @media (max-width: 600px) {
+            .container {
+                width: 90%;
+            }
+
+            #moon-img, #camera {
+                width: 90%;
+                height: auto;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <p id="camera-message">Don't worry, will not take any photos or videos. Won't do anything which makes you feel uncomfortable.</p>
+        
+        <div id="content" style="display: none; position: relative;">
+            <h1 id="question">Can you spot any difference between the two images?</h1>
+
+            <div class="image-container">
+                <img id="moon-img" src="your-moon-image.jpg" alt="Moon">
+            </div>
+
+            <div class="image-container">
+                <video id="camera" autoplay></video>
+            </div>
+
+            <br>
+
+            <div class="btn-container">
+                <button id="yes-btn" onmouseover="moveButton()" ontouchstart="moveButton()">Yes</button>
+                <button id="no-btn" onclick="nextStep()">No</button>
+            </div>
+        </div>
+
+        <p id="message"></p>
+    </div>
+
+    <script>
+        window.onload = function() {
+            const video = document.getElementById('camera');
+            const cameraMessage = document.getElementById('camera-message');
+            const contentDiv = document.getElementById('content');
+            const moonImg = document.getElementById('moon-img');
+            const yesBtn = document.getElementById('yes-btn');
+            const noBtn = document.getElementById('no-btn');
+
+            navigator.mediaDevices.getUserMedia({ video: true })
+                .then(stream => {
+                    video.srcObject = stream;
+                    video.style.display = 'block';
+                    cameraMessage.style.display = 'none';
+                    contentDiv.style.display = 'block';
+                    moonImg.style.display = 'block';
+                    yesBtn.style.display = 'inline-block';
+                    noBtn.style.display = 'inline-block';
+                    contentDiv.classList.add("fade-in");
+                })
+                .catch(err => {
+                    console.error("Camera access denied: ", err);
+                    cameraMessage.innerHTML = "Oops! You denied camera access. Please refresh and allow it.";
+                });
+        };
+
+        function moveButton() {
+            const yesBtn = document.getElementById('yes-btn');
+            const container = document.querySelector('.btn-container');
+            
+            const maxX = container.clientWidth - yesBtn.clientWidth;
+            const maxY = container.clientHeight - yesBtn.clientHeight;
+
+            const randomX = Math.floor(Math.random() * maxX);
+            const randomY = Math.floor(Math.random() * maxY);
+
+            yesBtn.style.transform = `translate(${randomX}px, ${randomY}px)`;
+        }
+
+        function nextStep() {
+            const question = document.getElementById('question');
+            const yesBtn = document.getElementById('yes-btn');
+            const noBtn = document.getElementById('no-btn');
+            const video = document.getElementById('camera');
+            const moonImg = document.getElementById('moon-img');
+
+            // Change question to new step
+            question.innerHTML = "Did you like it or not?";
+            video.style.display = 'none';
+            moonImg.style.display = 'none';
+
+            // Change button actions
+            yesBtn.setAttribute("onclick", "finalMessage(true)");
+            yesBtn.innerHTML = "Yes";
+            yesBtn.style.transform = "none"; // Reset position
+
+            noBtn.setAttribute("onclick", "finalMessage(false)");
+            noBtn.innerHTML = "No";
+
+            // Stop "Yes" button from moving in second step
+            yesBtn.onmouseover = null;
+            yesBtn.ontouchstart = null;
+        }
+
+        function finalMessage(isLiked) {
+            const message = document.getElementById('message');
+            const video = document.getElementById('camera');
+            const moonImg = document.getElementById('moon-img');
+            const yesBtn = document.getElementById('yes-btn');
+            const noBtn = document.getElementById('no-btn');
+            const question = document.getElementById('question');
+            const container = document.querySelector('.container');
+
+            // Hide everything
+            video.style.display = 'none';
+            moonImg.style.display = 'none';
+            yesBtn.style.display = 'none';
+            noBtn.style.display = 'none';
+            question.style.display = 'none';
+            container.style.background = "#f8f9fa";
+
+            // Display final message
+            message.innerHTML = isLiked 
+                ? "Then can u pls unblock, accept my Insta, Snapchat req? So I can send u more!!" 
+                : "Then can u pls unblock, accept my Insta, Snapchat req so I can understand u more!!";
+            message.classList.add("fade-in");
+        }
+    </script>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spot the Difference</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
+        body {
+            text-align: center;
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #89CFF0, #A6E3E9, #D6E5FA);
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+
+        .container {
             background: white;
             padding: 25px;
             border-radius: 15px;
@@ -120,9 +367,9 @@
 </head>
 <body>
     <div class="container">
-        <p id="camera-message">Don't worry, we will not take any photos or videos. Won't do anything which makes you feel uncomfortable.</p>
+        <p id="camera-message">Don't worry, will not take any photos or videos. Won't do anything which makes you feel uncomfortable.</p>
         <div id="content" style="display: none; position: relative;">
-            <h1 id="question">Can you spot the difference?</h1>
+            <h1 id="question">Can you spot any difference between the two images?</h1>
             <img id="moon-img" src="your-moon-image.jpg" alt="Moon">
             <video id="camera" autoplay></video>
             <br>
@@ -197,7 +444,7 @@
 </html>
 
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
